AG-3390 - Fix desktop nav flickering issue

--- a/grid-packages/ag-grid-docs/documentation/src/components/site-header/SiteHeader.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/components/site-header/SiteHeader.module.scss
@@ -138,6 +138,7 @@ $header-height: 64px;
 
     @media screen and (min-width: $breakpoint-site-header-small) {
         display: block !important; // !important needed to override bootstrap
+        overflow: visible !important; // !important needed to override bootstrap
     }
 }
 
